# mrfmsim-marohn

./: .gitignore  CHANGELOG.rst  LICENSE  README.rst  pyproject.toml
.github/workflows/: docs.yml
docs/: conf.py  experiment.rst  index.rst  ref_experiment.rst  ref_field.rst  ref_magnetization.rst  ref_math.rst  ref_misc.rst  ref_polarization.rst  simulation.rst  tests.rst  theory.rst
docs/experiment/: CermitARP.rst  CermitSat.rst  CermitSingleSpin.rst  CermitTD.rst  IBMCyclic.rst
docs/setup/: cermit_protocol.rst  geometry.rst  spin_count.rst  tip_size.rst
mrfmsim_marohn/: __init__.py  ancillary.py  modifier.py  units.yaml
mrfmsim_marohn/component/: __init__.py  cantilever.py  grid.py  magnet.py  sample.py
mrfmsim_marohn/components/: __init__.py  cantilever.py  grid.py  magnet.py  sample.py
mrfmsim_marohn/experiment/: CermitARPCollection.yaml  CermitESRCollection.yaml  CermitESRSingleSpinCollection.yaml  CermitSingleSpinCollection.yaml  CermitTDCollection.yaml  IBMCyclic.yaml  __init__.py  ibmcyclic.yaml
mrfmsim_marohn/experiment/cermitarp/: cermitarp.yaml  cermitarp_smalltip.yaml
mrfmsim_marohn/experiment/cermitesr/: cermitesr.yaml  cermitesr_periodirrad_stationarytip.yaml  cermitesr_singlespin.yaml  cermitesr_smalltip.yaml  cermitesr_stationarytip.yaml
mrfmsim_marohn/experiment/cermitnut/: cermitnut.yaml  cermitnut_multipulse.yaml
mrfmsim_marohn/experiment/cermitsinglespin/: cermitesr_singlespin.yaml  cermitesr_singlespin_approx.yaml
mrfmsim_marohn/experiment/cermittd/: cermittd.yaml  cermittd_singlepulse.yaml  cermittd_smalltip.yaml
mrfmsim_marohn/experiments/: __init__.py  cermitarp.yaml  cermitesr.yaml  cermitesr_smalltip.yaml  cermittd.yaml  cermittd_singlepulse.yaml  cermittd_smalltip.yaml  cornellesr.yaml  cornellesrsmalltip.yaml  cornelltdesr.yaml  cornelltdesrmultipulse.yaml  cornelltdesrstepmultipulse.yaml  ibmcyclic.yaml
mrfmsim_marohn/experiments/cermitarp/: cermitarp.yaml  cermitarp_smalltip.yaml
mrfmsim_marohn/experiments/cermitesr/: cermitesr.yaml  cermitesr_periodirrad_stationarytip.yaml  cermitesr_singlespin.yaml  cermitesr_smalltip.yaml  cermitesr_stationarytip.yaml
mrfmsim_marohn/experiments/cermitnut/: cermitnut.yaml  cermitnut_multipulse.yaml
mrfmsim_marohn/experiments/cermittd/: cermittd.yaml  cermittd_singlepulse.yaml  cermittd_smalltip.yaml
mrfmsim_marohn/formula/: field.py  magnetization.py  math.py  misc.py  polarization.py
mrfmsim_marohn/formulas/: __init__.py  field.py  magnetization.py  math.py  misc.py  polarization.py
tests/: test_ancillary.py  test_modifier.py  test_units.py
tests/test_component/: test_cantilever.py  test_grid.py  test_magnet.py  test_sample.py
tests/test_components/: test_cantilever.py  test_grid.py  test_magnet.py  test_sample.py
tests/test_experiment/: test_cermitarp.py  test_cermitesr.py  test_cermitsinglespin.py  test_cermittd.py  test_ibmcyclic.py  test_import.py
tests/test_experiments/: test_import.py
tests/test_formula/: test_field.py  test_magnetization.py  test_math.py  test_misc.py  test_polarization.py
tests/test_formulas/: test_field.py  test_magnetization.py  test_math.py  test_misc.py  test_polarization.py
