[tool.poetry]
name = "mrfmsim-marohn"
version = "0.2.0"
description = "Marohn group magnetic resonance force microscopy experiments"
authors = ["Peter Sun <hs859@cornell.edu>", "John Marohn <jam99@cornell.edu>"]
maintainers = ["Peter Sun <hs859@cornell.edu>"]
repository = "https://www.github.edu/Marohn-Group/mrfmsim-marohn"
packages = [{ include = "mrfmsim_marohn/*.py" }, { include = "mrfmsim_marohn/**/*.py" }]
include = ["mrfmsim_marohn/experiment/**/*.yaml"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.22"
numba = ">=0.59"
pyyaml = "^6.0"
mmodel = ">=0.6.2"
mrfmsim = { git = "https://github.com/marohn-group/mrfmsim.git", branch="develop" }
click = ">=8.1.0"
scipy = "^1.10.1"
tox = { version = ">=4.6.3", optional = true }
pytest = { version = ">=7.1.1", optional = true }
pytest-cov = { version = ">=3.0.0", optional = true }
sphinx = { version = "^6.2.1", optional = true }
sphinx-book-theme = { version = "^1.0.1", optional = true }
nbsphinx = { version = "^0.9.3", optional = true }


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
tox = ">=3.24.5"
pytest = ">=7.1.1"
pytest-cov = ">=3.0.0"
sphinx = "^6.2.1"
sphinx-book-theme = "^1.0.1"
nbsphinx = "^0.9.3"

[tool.poetry.extras]
test = ["tox", "pytest", "pytest-cov"]
docs = ["nbsphinx", "sphinx", "sphinx_book_theme"]


[tool.poetry.plugins."mrfmsim_plugin"]
experiment = "mrfmsim_marohn.experiment"


[tool.pytest.ini_options]
filterwarnings = [
    # note the use of single quote below to denote "raw" strings in TOML
    # the escape sequence is necessary in graphviz dot string
    # used to left align node text
    'ignore:invalid escape sequence \\l:DeprecationWarning',
    # The parallel method of numba might not be used in test
    # ignore the warning
    'ignore::numba.NumbaPerformanceWarning',
    'ignore::DeprecationWarning'
]

[tool.coverage.run]
# pytest coverage
source_pkgs = [
    'mrfmsim_marohn',
    'mrfmsim_marohn.component',
    'mrfmsim_marohn.formula',
    'mrfmsim_marohn.experiment',
]
omit = ['tests/*']

[tool.tox]
# for testing different python environments
legacy_tox_ini = """
[tox]
envlist = py310, py311, py312, coverage, docs
isolated_build = True
 
[testenv:py310]
deps = pytest >= 7.1.1
commands = 
    pytest

[testenv:py311]
deps = pytest >= 7.1.1
commands = 
    pytest

[testenv:py312]
deps = pytest >= 7.1.1
commands = 
    pytest

[testenv:coverage]
deps = 
    pytest >= 7.1.1
    pytest-cov >= 3.0.0
commands =
    coverage run --source=tests -m pytest
    coverage html
    coverage report

[testenv:docs]
deps = 
    pytest >= 7.1.1
    sphinx == 6.2.1
    sphinx-book-theme == 1.0.1
    nbsphinx == 0.9.3
commands =
    # sphinx-build -W -b html ./docs ./docs/_build/html
    sphinx-build -W -b html -d "{toxworkdir}/docs" docs "{toxinidir}/docs/_build/html"

[gh-actions]
python =
    3.10: py310, coverage, docs
    3.11: py311, coverage, docs
    3.12: py311, coverage, docs
"""
